--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
   <link rel="canonical" href="https://compomint.dev">
 
   <!-- Alternate language versions -->
-  <link rel="alternate" hreflang="en" href="https://compomint.dev/en/">
-  <link rel="alternate" hreflang="ko" href="https://compomint.dev/ko/">
-  <link rel="alternate" hreflang="ja" href="https://compomint.dev/ja/">
-  <link rel="alternate" hreflang="zh" href="https://compomint.dev/zh/">
+  <link rel="alternate" hreflang="en" href="https://compomint.dev/?lang=en">
+  <link rel="alternate" hreflang="ko" href="https://compomint.dev/?lang=ko">
+  <link rel="alternate" hreflang="ja" href="https://compomint.dev/?lang=ja">
+  <link rel="alternate" hreflang="zh" href="https://compomint.dev/?lang=zh">
   <link rel="alternate" hreflang="x-default" href="https://compomint.dev">
 
   <!-- Favicon and App Icons -->
