--- a/index.html
+++ b/index.html
@@ -115,6 +115,16 @@
       }, 500);
     });
   </script>
+
+  <!-- Google tag (gtag.js) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-6X8Q36NXSW"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+  
+    gtag('config', 'G-6X8Q36NXSW');
+  </script>
 </head>
 
 <body class="bg-gray-50 text-gray-900">
