--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
     <link rel="alternate" hreflang="x-default" href="https://compomint.dev" />
 
     <!-- Favicon and App Icons -->
-    <link rel="icon" type="image/png" href="/assets/icon-CN_Ahc-j.png" />
-    <link rel="apple-touch-icon" href="/assets/icon-CN_Ahc-j.png" />
+    <link rel="icon" type="image/png" href="img/icon.png" />
+    <link rel="apple-touch-icon" href="img/icon.png" />
     <link rel="manifest" href="/assets/manifest-fA7kih_p.json" />
 
     <!-- Open Graph / Facebook -->
