--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <!-- Favicon and App Icons -->
     <link rel="icon" type="image/png" href="img/icon.png" />
     <link rel="apple-touch-icon" href="img/icon.png" />
-    <link rel="manifest" href="/assets/manifest-fA7kih_p.json" />
+    <!--<link rel="manifest" href="manifest.json" />-->
 
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website" />
@@ -127,8 +127,14 @@
     </style>
 
     <!-- CodeMirror -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.65.2/codemirror.min.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.65.2/theme/monokai.min.css">
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.65.2/codemirror.min.css"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.65.2/theme/monokai.min.css"
+    />
     <script src="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.65.2/codemirror.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.65.2/mode/javascript/javascript.min.js"></script>
 
