--- a/index.html
+++ b/index.html
@@ -172,8 +172,8 @@
 
       gtag("config", "G-6X8Q36NXSW");
     </script>
-    <script type="module" crossorigin src="/assets/main-BAYXcYP-.js"></script>
-    <link rel="stylesheet" crossorigin href="/assets/main-vwNuosuT.css">
+    <script type="module" crossorigin src="/assets/main-DuWojbB_.js"></script>
+    <link rel="stylesheet" crossorigin href="/assets/main-B6p1ebBb.css">
   </head>
 
   <body class="bg-gray-50 text-gray-900">
