--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
         };
       }
     </script>
-    <script type="module" crossorigin src="/assets/main-4NdSXMSS.js"></script>
+    <script type="module" crossorigin src="/assets/main-B2Q6x9to.js"></script>
     <link rel="stylesheet" crossorigin href="/assets/main-ClHhvvv3.css">
   </head>
 
