--- a/index.html
+++ b/index.html
@@ -187,8 +187,8 @@
         };
       }
     </script>
-    <script type="module" crossorigin src="/assets/main-B2Q6x9to.js"></script>
-    <link rel="stylesheet" crossorigin href="/assets/main-ClHhvvv3.css">
+    <script type="module" crossorigin src="/assets/main-Baf-uTz9.js"></script>
+    <link rel="stylesheet" crossorigin href="/assets/main-B_A99JsS.css">
   </head>
 
   <body class="bg-gray-50 text-gray-900">
