--- a/index.html
+++ b/index.html
@@ -187,8 +187,8 @@
         };
       }
     </script>
-    <script type="module" crossorigin src="/assets/main-Baf-uTz9.js"></script>
-    <link rel="stylesheet" crossorigin href="/assets/main-B_A99JsS.css">
+    <script type="module" crossorigin src="/assets/main-DbqVq238.js"></script>
+    <link rel="stylesheet" crossorigin href="/assets/main-DhQkqU0G.css">
   </head>
 
   <body class="bg-gray-50 text-gray-900">
