--- a/public/404.html
+++ b/public/404.html
@@ -12,7 +12,7 @@
     <link rel="canonical" href="https://compomint.dev/" />
 
     <!-- Favicon -->
-    <link rel="icon" type="image/png" href="img/icon.png" />
+    <link rel="icon" type="image/png" href="/assets/icon-CN_Ahc-j.png" />
 
     <!-- Tailwind CSS -->
     <link rel="stylesheet" href="css/output.css" />
