--- a/404.html
+++ b/404.html
@@ -12,10 +12,9 @@
     <link rel="canonical" href="https://compomint.dev/" />
 
     <!-- Favicon -->
-    <link rel="icon" type="image/png" href="img/icon.png" />
+    <link rel="icon" type="image/png" href="/assets/icon-Dx2WUy-5.png" />
 
     <!-- Tailwind CSS -->
-    <link rel="stylesheet" href="css/output.css" />
 
     <!-- Structured Data for 404 -->
     <script type="application/ld+json">
@@ -103,6 +102,7 @@
         }
       }
     </style>
+    <link rel="stylesheet" crossorigin href="/assets/main-Be85eM4R.css">
   </head>
   <body
     class="bg-gray-50 dark:bg-gray-900 text-gray-900 dark:text-gray-100 min-h-screen flex items-center justify-center"
