--- a/index.html
+++ b/index.html
@@ -554,7 +554,7 @@
         };
       }
     </script>
-    <script type="module" crossorigin src="/assets/main-DrTBC4WT.js"></script>
+    <script type="module" crossorigin src="/assets/main-D5sXtc53.js"></script>
     <link rel="stylesheet" crossorigin href="/assets/main-Be85eM4R.css">
   </head>
 
