--- a/404.html
+++ b/404.html
@@ -12,10 +12,10 @@
     <link rel="canonical" href="https://compomint.dev/" />
 
     <!-- Favicon -->
-    <link rel="icon" type="image/png" href="/img/icon.png" />
+    <link rel="icon" type="image/png" href="img/icon.png" />
 
     <!-- Tailwind CSS -->
-    <link rel="stylesheet" href="/css/output.css" />
+    <link rel="stylesheet" href="css/output.css" />
 
     <!-- Structured Data for 404 -->
     <script type="application/ld+json">
@@ -246,40 +246,6 @@
               Interactive guide
             </div>
           </a>
-        </div>
-      </div>
-
-      <!-- Search Box -->
-      <div class="mb-8">
-        <div class="max-w-md mx-auto">
-          <label for="search" class="sr-only">Search Compomint site</label>
-          <div class="relative">
-            <input
-              type="text"
-              id="search"
-              class="w-full px-4 py-2 border border-gray-300 dark:border-gray-600 rounded-lg bg-white dark:bg-gray-800 text-gray-900 dark:text-gray-100 focus:ring-2 focus:ring-blue-500 focus:border-transparent"
-              placeholder="Search documentation..."
-              onkeypress="if(event.key==='Enter') performSearch()"
-            />
-            <button
-              onclick="performSearch()"
-              class="absolute right-2 top-1/2 transform -translate-y-1/2 text-gray-400 hover:text-gray-600 dark:hover:text-gray-300"
-            >
-              <svg
-                class="w-5 h-5"
-                fill="none"
-                stroke="currentColor"
-                viewBox="0 0 24 24"
-              >
-                <path
-                  stroke-linecap="round"
-                  stroke-linejoin="round"
-                  stroke-width="2"
-                  d="M21 21l-6-6m2-5a7 7 0 11-14 0 7 7 0 0114 0z"
-                ></path>
-              </svg>
-            </button>
-          </div>
         </div>
       </div>
 
