--- a/index.html
+++ b/index.html
@@ -548,8 +548,8 @@
         };
       }
     </script>
-    <script type="module" crossorigin src="/assets/main-D5sXtc53.js"></script>
-    <link rel="stylesheet" crossorigin href="/assets/main-Be85eM4R.css">
+    <script type="module" crossorigin src="/assets/main-CioQIpwP.js"></script>
+    <link rel="stylesheet" crossorigin href="/assets/output-Be85eM4R.css">
   </head>
 
   <body class="bg-gray-50 text-gray-900">
