--- a/404.html
+++ b/404.html
@@ -12,6 +12,7 @@
     <link rel="canonical" href="https://compomint.dev/" />
 
     <!-- Favicon -->
+    <link rel="icon" type="image/svg+xml" href="/assets/favicon-Dowh-BWe.svg" />
     <link rel="icon" type="image/png" href="/assets/icon-Dx2WUy-5.png" />
 
     <!-- Tailwind CSS -->
