--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
     />
 
     <!-- Favicon and App Icons -->
+    <link rel="icon" type="image/svg+xml" href="/assets/favicon-Dowh-BWe.svg" />
     <link rel="icon" type="image/png" href="/assets/icon-Dx2WUy-5.png" />
     <link rel="apple-touch-icon" href="/assets/icon-Dx2WUy-5.png" />
     <link rel="manifest" href="/assets/manifest-CLa0iLy4.json" />
@@ -493,17 +494,7 @@
       }
     </style>
 
-    <!-- CodeMirror -->
-    <link rel="stylesheet" href="lib/codemirror/codemirror.css" />
-    <link rel="stylesheet" href="lib/codemirror/monokai.css" />
-    <script src="lib/codemirror/codemirror.js"></script>
-    <script src="lib/codemirror/javascript.js"></script>
 
-    <!-- Theme switcher -->
-
-    <!-- Syntax highlighter -->
-
-    <!-- Language switcher -->
 
     <!-- Main script -->
 
@@ -548,7 +539,8 @@
         };
       }
     </script>
-    <script type="module" crossorigin src="/assets/main-CioQIpwP.js"></script>
+    <script type="module" crossorigin src="/assets/main-Dwmw2Rq7.js"></script>
+    <link rel="stylesheet" crossorigin href="/assets/main-BwCumXla.css">
     <link rel="stylesheet" crossorigin href="/assets/output-Be85eM4R.css">
   </head>
 
