--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <!-- SEO Meta Tags -->
     <meta name="author" content="Compomint Team" />
     <meta name="robots" content="index, follow" />
+    <meta name="msvalidate.01" content="7C812C8A2F69088B40BAB2F45E21D5F0" />
     <link rel="canonical" href="https://compomint.dev" />
 
     <!-- Alternate language versions -->
@@ -493,8 +494,6 @@
         --text-secondary: #e5e7eb;
       }
     </style>
-
-
 
     <!-- Main script -->
 
