--- a/index.html
+++ b/index.html
@@ -544,6 +544,7 @@
   </head>
 
   <body class="bg-gray-50 text-gray-900">
+    <meta name="msvalidate.01" content="7C812C8A2F69088B40BAB2F45E21D5F0" />
     <div id="app-container"></div>
 
     <!-- Service Worker Registration -->
