feat: add fetch data loading example with i18n support
- Add fetch-data directory with 5 JSON sample files in English
- Create interactive data fetching component with pagination
- Add real-time loading states and error handling
- Enable console logging for all examples (showConsole: true)
- Add fetchDataLoading i18n translations for 4 languages
- Fix CSS property value error in input.css

Features:
- Previous/Next navigation through 5 data files
- Loading spinner and error states
- Detailed console logging for debugging
- Responsive UI with dark mode support
- Multi-language title and description support

--- a/404.html
+++ b/404.html
@@ -12,6 +12,7 @@
     <link rel="canonical" href="https://compomint.dev/" />
 
     <!-- Favicon -->
+    <link rel="icon" type="image/svg+xml" href="img/favicon.svg" />
     <link rel="icon" type="image/png" href="img/icon.png" />
 
     <!-- Tailwind CSS -->
