--- a/404.html
+++ b/404.html
@@ -103,7 +103,7 @@
         }
       }
     </style>
-    <link rel="stylesheet" crossorigin href="/assets/output-VZYG0uiM.css">
+    <link rel="stylesheet" crossorigin href="/assets/output-AHypnpUV.css">
   </head>
   <body
     class="bg-gray-50 dark:bg-gray-900 text-gray-900 dark:text-gray-100 min-h-screen flex items-center justify-center"
