--- a/index.html
+++ b/index.html
@@ -537,9 +537,9 @@
         };
       }
     </script>
-    <script type="module" crossorigin src="/assets/main-CYhFsN59.js"></script>
+    <script type="module" crossorigin src="/assets/main-ZKIQW4oK.js"></script>
     <link rel="stylesheet" crossorigin href="/assets/main-BwCumXla.css">
-    <link rel="stylesheet" crossorigin href="/assets/output-VZYG0uiM.css">
+    <link rel="stylesheet" crossorigin href="/assets/output-AHypnpUV.css">
   </head>
 
   <body class="bg-gray-50 text-gray-900">
