--- a/index.html
+++ b/index.html
@@ -537,7 +537,7 @@
         };
       }
     </script>
-    <script type="module" crossorigin src="/assets/main-QTQR7_u9.js"></script>
+    <script type="module" crossorigin src="/assets/main-BBxfeVoz.js"></script>
     <link rel="stylesheet" crossorigin href="/assets/main-BwCumXla.css">
     <link rel="stylesheet" crossorigin href="/assets/output-AHypnpUV.css">
   </head>
