--- a/index.html
+++ b/index.html
@@ -537,9 +537,9 @@
         };
       }
     </script>
-    <script type="module" crossorigin src="/assets/main-BD_Q91VD.js"></script>
+    <script type="module" crossorigin src="/assets/main-m1o2hcL7.js"></script>
     <link rel="stylesheet" crossorigin href="/assets/main-BwCumXla.css">
-    <link rel="stylesheet" crossorigin href="/assets/output-DfXAEspg.css">
+    <link rel="stylesheet" crossorigin href="/assets/output-CR3XRgLS.css">
   </head>
 
   <body class="bg-gray-50 text-gray-900">
